Documentation edits made through Mintlify web editor

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Introduction"
-description: "Welcome to the home of your new documentation. How easy is this?"
+description: "Welcome to the home of your new documentation. This is now in a folder."
 ---
 
 <img
