Documentation edits made through Mintlify web editor

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -15,6 +15,8 @@ description: "Welcome to the home of your new documentation. This is now in a fo
   alt="Hero Dark"
 />
 
+Bee test
+
 ## Setting up
 
 The first step to world-class documentation is setting up your editing environments.
