--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -26,15 +26,7 @@ The first step to world-class documentation is setting up your editing environme
   <Card title="Preview Changes" icon="image" href="https://mintlify.com/docs/development">
     Preview your changes before you push to make sure they're perfect
   </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols="2">
-  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
-    Customize your docs to your company's colors and brands
+</CardGroup>asdfdocs to your company's colors and brands
   </Card>
   <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
     Automatically generate endpoints from an OpenAPI spec
